# rot_conv_lib

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/rot_conv/: rot_conv.h
src/: rot_conv.cpp  rot_conv.h
test/: rot_conv_sample.cpp  test_rot_conv.cpp
